--- a/#source/header.html
+++ b/#source/header.html
@@ -5,14 +5,14 @@
       <p class="menu">МЕНЮ</p>
     </div>
     <a href="index.html" class="logo">
-      LOGOS
+      #ГРИЛЛЬ <span> экспресс</span>
     </a>
     <div class="header__center">
       <div class="header__search">
         <a href="#">
           <img src="img/icon/Location.svg" alt="Location">
         </a>
-        <input type="search" name="search" id="search" placeholder="Введите адрес доставки" maxlength="70">
+        <input type="search" name="search" id="suggest" placeholder="Введите адрес доставки: Саранск" maxlength="70">
         <a href="#">
           <img src="img/icon/Search.svg" alt="Search">
         </a>
