--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant</title>
+    <title>#Грилль Экспресс</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
     />
@@ -19,14 +19,14 @@
       <p class="menu">МЕНЮ</p>
     </div>
     <a href="index.html" class="logo">
-      LOGOS
+      #ГРИЛЛЬ <span> экспресс</span>
     </a>
     <div class="header__center">
       <div class="header__search">
         <a href="#">
           <img src="img/icon/Location.svg" alt="Location">
         </a>
-        <input type="search" name="search" id="search" placeholder="Введите адрес доставки" maxlength="70">
+        <input type="search" name="search" id="suggest" placeholder="Введите адрес доставки: Саранск" maxlength="70">
         <a href="#">
           <img src="img/icon/Search.svg" alt="Search">
         </a>
