--- a/#source/header.html
+++ b/#source/header.html
@@ -4,8 +4,8 @@
       <div class="hamb__field"></div>
       <p class="menu">МЕНЮ</p>
     </div>
-    <a href="index.html" class="logo">
-      #ГРИЛЛЬ <span> экспресс</span>
+    <a class="logo scroll-up">
+      #ГРИЛЛЬ <br><span> экспресс</span>
     </a>
     <div class="header__center">
       <div class="header__search">
