--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <meta name="description" content="Доставка вкуснейших блюд за 60 минут">
     <meta name="keywords" content="#Гриль, Грил саранск, достака шаурмы саранск, Гриль экспресс, гамбургер сарсанск доставка">
     <meta name="robots" content="noimageindex, nofollow">
-    <meta name="Addres" content="Саранск, улица Титова, 10с1">
+    <meta name="Address" content="Саранск, улица Титова, 10с1">
 
     <meta property="og:locale" content="ru_RU">
     <meta property="og:title" content="#Гриль Экспресс">    
     <meta property="og:description" content="Доставка вкуснейших блюд за 60 минут">
-    </head>
+    <meta property="og:image" content="img/icon/share.png">
+    <meta property="og:site_name" content="#Гриль Экспресс">
+</head>
 
 <body>
 <header class="header">
@@ -26,8 +28,8 @@
       <div class="hamb__field"></div>
       <p class="menu">МЕНЮ</p>
     </div>
-    <a href="index.html" class="logo">
-      #ГРИЛЛЬ <span> экспресс</span>
+    <a class="logo scroll-up">
+      #ГРИЛЛЬ <br><span> экспресс</span>
     </a>
     <div class="header__center">
       <div class="header__search">
@@ -476,7 +478,22 @@
             <div id="map"></div>
         </section>
     </main>
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+<footer class="footer">
+  <div class="footer_row container">
+    <button class="footer__scroll-up scroll-up">
+      <img src="img/icon/scroll-up.svg" alt="В начало старницы">
+    </button>
+    <nav class="copyright">
+      <a href="index.html" class="logo footer-logo">
+        #ГРИЛЛЬ <br><span> экспресс</span>
+      </a>
+      <div class="address">
+        Мы работаем: <br>
+        <span>С 11:00 до 23:00</span>
+      </div>
+    </nav>
+  </div>
+</footer>    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://api-maps.yandex.ru/2.1/?apikey=4efb335a-a405-41a7-94e9-2ca5e54a5708&lang=ru_RU" type="text/javascript"></script>
     <!-- <script src="balloon_and_hint.js" type="text/javascript"></script> -->
     <script src="js/script.js"></script>
