--- a/#source/header.html
+++ b/#source/header.html
@@ -8,7 +8,7 @@
       #ГРИЛЛЬ <br><span> экспресс</span>
     </a>
     <div class="header__center">
-      <div class="header__search">
+      <!-- <div class="header__search">
         <a href="#">
           <img src="img/icon/Location.svg" alt="Location">
         </a>
@@ -16,7 +16,7 @@
         <a href="#">
           <img src="img/icon/Search.svg" alt="Search">
         </a>
-      </div>
+      </div> -->
       <div class="call">
         <a class="call__icon" href="tel:+7900123456">
           <img src="img/icon/Calling.svg" alt="call">
@@ -27,12 +27,12 @@
         </a>
       </div>
     </div>
-    <a href="#" class="basket">
+    <button class="basket-button">
       <p>Корзина</p>
       <span></span>
       <img src="img/icon/Buy.svg" alt="Buy">
       <p class="basket-quantity">0</p>
-    </a>
+    </button>
   </div>
   <div class="popup">
     <div class="call">
