--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
                         <div class="snacks__body">
                             <h3 class="snacks__title">Ягненок</h3>
                             <p class="snacks__about">
-                                Фаршированный гречневой кашей,
-                                курагой, апельсином и зеленым яблоком
+                                Очень вкусно
                             </p>
                             <div class="snacks__buttons">
                                 <span class="snacks__price">
@@ -127,7 +126,7 @@
                     </div>
                     <div class="swiper-slide snacks">
                         <a href ="">
-                            <img src="img/cold-snacks/cold-snacks-1.jpg" alt="cold-snack">
+                            <img src="img/cold-snacks/cold-snacks-2.jpg" alt="cold-snack">
                         </a>
                         <div class="snacks__body">
                             <h3 class="snacks__title">Гусь</h3>
@@ -156,13 +155,12 @@
                     </div>
                     <div class="swiper-slide snacks">
                         <a href ="">
-                            <img src="img/cold-snacks/cold-snacks-1.jpg" alt="cold-snack">
+                            <img src="img/cold-snacks/cold-snacks-3.jpg" alt="cold-snack">
                         </a>
                         <div class="snacks__body">
                             <h3 class="snacks__title">Бургер</h3>
                             <p class="snacks__about">
-                                Фаршированный гречневой кашей,
-                                курагой, апельсином и зеленым яблоком
+                                Рекомендую
                             </p>
                             <div class="snacks__buttons">
                                 <span class="snacks__price">
@@ -282,32 +280,7 @@
         </div>
     </div>
     <div class="basket-products">
-        <div class="product">
-            <div class="product__img">
-                <img src="/img/cold-snacks/cold-snacks-3.jpg" alt="фото товара">
-            </div>
-            <div class="product__body">
-                <div class="snacks__title product__title">
-                    ПИЦЦА ДВОЙНАЯ ПЕППЕРОНИ
-                </div>
-                <p class="product__about">
-                    Кальмары, мидии, креветки, сыр маасдам, 
-                    красный лук, микс оливок, базилик, соус песто
-                </p>
-            </div>
-            <div class="product-edit">
-                <button class="minus">-</button>
-                <div class="quantity">
-                    1
-                </div>
-                <button class="plus">+</button>
-            </div>
-            <div class="product-price">
-                <div class="snacks__price">162</div>
-                <button class="product-delete">X</button>
-            </div>
-        </div>
-
+        
     </div>
     <div class="basket-total">
         <div class="total__body">
