--- a/#source/basket.html
+++ b/#source/basket.html
@@ -13,15 +13,18 @@
         </div>
     </div>
     <div class="basket-products">
-        
+
     </div>
     <div class="basket-total">
         <div class="total__body">
             <div class="total__title">
                 500
             </div>
-            <p class="total__need4free">100</p>
-            <p class="total__min">Минимальная сума заказа 700 ₽</p>
+            <p class="totalEnough">
+                До бесплатной доставки не хватет: 
+            </p>
+            <p class="total__need4free">0 <span> ₽</span></p>
+            <p class="total__min">700</p>
         </div>
         <button class="total__checkout">
             Оформить заказ
