--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <img src="img/cold-snacks/cold-snacks-1.jpg" alt="cold-snack">
                         </a>
                         <div class="snacks__body">
-                            <h3 class="snacks__title">Ягненок</h3>
+                            <h3 class="snacks__title">Суп</h3>
                             <p class="snacks__about">
                                 Очень вкусно
                             </p>
@@ -178,6 +178,31 @@
                             <p class="snacks__mass">
                                 150
                             </p>
+                        </div>
+                        <div class="snacks-quantity"></div>
+                    </div>
+                    <div class="swiper-slide snacks">
+                        <a href ="">
+                            <img src="img/cold-snacks/cola.png" alt="cold-snack">
+                        </a>
+                        <div class="snacks__body">
+                            <h3 class="snacks__title">Кола</h3>
+                            <p class="snacks__about">
+                                1,5 литра
+                            </p>
+                            <div class="snacks__buttons">
+                                <span class="snacks__price">
+                                    109
+                                </span>
+                                <button class="snacks__basket basket__default basketDefault">
+                                    <span class="basketDefault">В корзину</span>
+                                    <div class="basket__icon basketDefault">
+                                        <img class="basketDefault" src="img/icon/Buy.svg" alt="Buy">
+                                    </div>
+                                </button>
+                                <button class="snacks__basket minus" style="display: none;">-</button>
+                                <button class="snacks__basket plus" style="display: none;">+</button>
+                            </div>
                         </div>
                         <div class="snacks-quantity"></div>
                     </div>
@@ -280,15 +305,18 @@
         </div>
     </div>
     <div class="basket-products">
-        
+
     </div>
     <div class="basket-total">
         <div class="total__body">
             <div class="total__title">
                 500
             </div>
-            <p class="total__need4free">100</p>
-            <p class="total__min">Минимальная сума заказа 700 ₽</p>
+            <p class="totalEnough">
+                До бесплатной доставки не хватет: 
+            </p>
+            <p class="total__need4free">0 <span> ₽</span></p>
+            <p class="total__min">700</p>
         </div>
         <button class="total__checkout">
             Оформить заказ
