--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
                         </a>
                         <div class="snacks__body">
                             <h3 class="snacks__title">Суп</h3>
-                            <p class="snacks__about">
-                                Очень вкусно
-                            </p>
+                            <p class="snacks__about">Очень вкусно</p>
                             <div class="snacks__buttons">
                                 <span class="snacks__price">
                                     620
@@ -130,10 +128,7 @@
                         </a>
                         <div class="snacks__body">
                             <h3 class="snacks__title">Гусь</h3>
-                            <p class="snacks__about">
-                                Фаршированный гречневой кашей,
-                                курагой, апельсином и зеленым яблоком
-                            </p>
+                            <p class="snacks__about">Фаршированный гречневой кашей, курагой, апельсином и зеленым яблоком</p>
                             <div class="snacks__buttons">
                                 <span class="snacks__price">
                                     500
@@ -159,9 +154,7 @@
                         </a>
                         <div class="snacks__body">
                             <h3 class="snacks__title">Бургер</h3>
-                            <p class="snacks__about">
-                                Рекомендую
-                            </p>
+                            <p class="snacks__about">Рекомендую</p>
                             <div class="snacks__buttons">
                                 <span class="snacks__price">
                                     100
@@ -187,12 +180,33 @@
                         </a>
                         <div class="snacks__body">
                             <h3 class="snacks__title">Кола</h3>
-                            <p class="snacks__about">
-                                1,5 литра
-                            </p>
+                            <p class="snacks__about">1,5 литра</p>
                             <div class="snacks__buttons">
                                 <span class="snacks__price">
                                     109
+                                </span>
+                                <button class="snacks__basket basket__default basketDefault">
+                                    <span class="basketDefault">В корзину</span>
+                                    <div class="basket__icon basketDefault">
+                                        <img class="basketDefault" src="img/icon/Buy.svg" alt="Buy">
+                                    </div>
+                                </button>
+                                <button class="snacks__basket minus" style="display: none;">-</button>
+                                <button class="snacks__basket plus" style="display: none;">+</button>
+                            </div>
+                        </div>
+                        <div class="snacks-quantity"></div>
+                    </div>
+                    <div class="swiper-slide snacks">
+                        <a href ="">
+                            <img src="img/cold-snacks/kfc.jpg" alt="cold-snack">
+                        </a>
+                        <div class="snacks__body">
+                            <h3 class="snacks__title">KFC</h3>
+                            <p class="snacks__about">30 Штук</p>
+                            <div class="snacks__buttons">
+                                <span class="snacks__price">
+                                    75
                                 </span>
                                 <button class="snacks__basket basket__default basketDefault">
                                     <span class="basketDefault">В корзину</span>
