--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>#Гриль Экспресс</title>
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/icon/logo_transparent.png" type="image/x-icon">
 
@@ -357,7 +357,7 @@
       </div>
     </nav>
   </div>
-</footer>    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+</footer>    <script src="js/swiper.min.js"></script>
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=4efb335a-a405-41a7-94e9-2ca5e54a5708" type="text/javascript"></script>
     <script src="js/script.js"></script>
 </body>
