--- a/#source/header.html
+++ b/#source/header.html
@@ -7,16 +7,7 @@
     <a class="logo scroll-up">
       #ГРИЛЛЬ <br><span> экспресс</span>
     </a>
-    <div class="header__center">
-      <!-- <div class="header__search">
-        <a href="#">
-          <img src="img/icon/Location.svg" alt="Location">
-        </a>
-        <input type="search" name="search" id="suggest" placeholder="Введите адрес доставки: Саранск" maxlength="70">
-        <a href="#">
-          <img src="img/icon/Search.svg" alt="Search">
-        </a>
-      </div> -->
+    <div class="header__right">
       <div class="call">
         <a class="call__icon" href="tel:+7900123456">
           <img src="img/icon/Calling.svg" alt="call">
@@ -26,13 +17,13 @@
           +7 (917) 510-57-59
         </a>
       </div>
+      <button class="basket-button">
+        <p>Корзина</p>
+        <span></span>
+        <img src="img/icon/Buy.svg" alt="Buy">
+        <p class="basket-quantity">0</p>
+      </button>
     </div>
-    <button class="basket-button">
-      <p>Корзина</p>
-      <span></span>
-      <img src="img/icon/Buy.svg" alt="Buy">
-      <p class="basket-quantity">0</p>
-    </button>
   </div>
   <div class="popup">
     <div class="call">
